--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -2665,6 +2665,12 @@ video {
 .w-\[66px\] {
   width: 66px;
 }
+.w-\[601px\] {
+  width: 601px;
+}
+.w-\[371px\] {
+  width: 371px;
+}
 .min-w-\[320px\] {
   min-width: 320px;
 }
@@ -7943,6 +7949,12 @@ video {
   .laptop\:top-\[40px\] {
     top: 40px;
   }
+  .laptop\:left-\[-175px\] {
+    left: -175px;
+  }
+  .laptop\:top-\[-168px\] {
+    top: -168px;
+  }
   .laptop\:z-2 {
     z-index: 2;
   }
@@ -8336,6 +8348,9 @@ video {
   }
   .laptop\:w-\[60px\] {
     width: 60px;
+  }
+  .laptop\:w-\[660px\] {
+    width: 660px;
   }
   .laptop\:min-w-\[1009px\] {
     min-width: 1009px;
@@ -9172,6 +9187,12 @@ video {
   .desktop\:top-\[170px\] {
     top: 170px;
   }
+  .desktop\:left-\[-210px\] {
+    left: -210px;
+  }
+  .desktop\:top-\[-190px\] {
+    top: -190px;
+  }
   .desktop\:col-span-6 {
     grid-column: span 6 / span 6;
   }
@@ -9974,6 +9995,9 @@ video {
   .desktopXl\:top-\[100px\] {
     top: 100px;
   }
+  .desktopXl\:left-\[-260px\] {
+    left: -260px;
+  }
   .desktopXl\:col-span-7 {
     grid-column: span 7 / span 7;
   }
@@ -10058,6 +10082,9 @@ video {
   }
   .desktopXl\:w-\[1020px\] {
     width: 1020px;
+  }
+  .desktopXl\:w-\[780px\] {
+    width: 780px;
   }
   .desktopXl\:max-w-\[1180px\] {
     max-width: 1180px;
