--- a/app/components/blog/blog.css
+++ b/app/components/blog/blog.css
@@ -125,3 +125,10 @@
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
 }
+
+.line-clamp-3 {
+ display: -webkit-box;
+ -webkit-line-clamp: 3;
+ -webkit-box-orient: vertical;
+ overflow: hidden;
+}
