--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -673,7 +673,6 @@ video {
 .btn-primary-ring {
   outline: 2px solid transparent;
   outline-offset: 2px;
-  border-width: 0;
   --tw-ring-offset-width: 4px;
   --tw-ring-opacity: 1;
   --tw-ring-color: var(--emerald-500);
@@ -1766,6 +1765,12 @@ video {
 .right-\[0px\] {
   right: 0px;
 }
+.top-\[-170px\] {
+  top: -170px;
+}
+.right-\[-160px\] {
+  right: -160px;
+}
 .top-\[-27px\] {
   top: -27px;
 }
@@ -1840,9 +1845,6 @@ video {
 }
 .left-\[300px\] {
   left: 300px;
-}
-.top-\[-170px\] {
-  top: -170px;
 }
 .left-\[-120px\] {
   left: -120px;
@@ -2686,6 +2688,9 @@ video {
 .w-\[66px\] {
   width: 66px;
 }
+.w-6 {
+  width: 1.5rem;
+}
 .min-w-\[320px\] {
   min-width: 320px;
 }
@@ -2763,6 +2768,9 @@ video {
 }
 .max-w-\[1000px\] {
   max-width: 1000px;
+}
+.max-w-\[2000px\] {
+  max-width: 2000px;
 }
 .max-w-\[273px\] {
   max-width: 273px;
@@ -2868,6 +2876,9 @@ video {
 }
 .max-w-\[940px\] {
   max-width: 940px;
+}
+.max-w-\[305px\] {
+  max-width: 305px;
 }
 .max-w-\[110px\] {
   max-width: 110px;
@@ -3750,6 +3761,9 @@ video {
 }
 .gap-y-7 {
   row-gap: 1.75rem;
+}
+.gap-y-10 {
+  row-gap: 2.5rem;
 }
 .space-y-8 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
@@ -4988,6 +5002,19 @@ video {
   --tw-text-opacity: 1;
   color: rgb(60 38 38 / var(--tw-text-opacity));
 }
+.text-tangerine-600 {
+  color: var(--tangerine-600);
+}
+.text-tangerine-700 {
+  color: var(--tangerine-700);
+}
+.text-grey-300 {
+  --tw-text-opacity: 1;
+  color: rgb(211 213 219 / var(--tw-text-opacity));
+}
+.text-emerald-800 {
+  color: var(--emerald-800);
+}
 .text-opacity-70 {
   --tw-text-opacity: 0.7;
 }
@@ -5159,8 +5186,8 @@ video {
 .ring-offset-cream-100 {
   --tw-ring-offset-color: #F7F6F7;
 }
-.ring-offset-sage-700 {
-  --tw-ring-offset-color: var(--sage-700);
+.ring-offset-emerald-900 {
+  --tw-ring-offset-color: var(--emerald-900);
 }
 .ring-offset-emerald-800 {
   --tw-ring-offset-color: var(--emerald-800);
@@ -5723,11 +5750,20 @@ video {
 .last\:mb-0:last-child {
   margin-bottom: 0px;
 }
+.last\:mb-3:last-child {
+  margin-bottom: 0.75rem;
+}
 .last\:border-0:last-child {
   border-width: 0px;
 }
 .last\:pb-0:last-child {
   padding-bottom: 0px;
+}
+.last\:pb-3:last-child {
+  padding-bottom: 0.75rem;
+}
+.last\:pb-5:last-child {
+  padding-bottom: 1.25rem;
 }
 .checked\:border-success-500:checked {
   --tw-border-opacity: 1;
@@ -7285,6 +7321,13 @@ video {
         -ms-flex: .5;
             flex: .5;
   }
+  .tablet\:flex-\[1_0_48\%\] {
+    -webkit-box-flex: 1;
+    -webkit-flex: 1 0 48%;
+       -moz-box-flex: 1;
+        -ms-flex: 1 0 48%;
+            flex: 1 0 48%;
+  }
   .tablet\:translate-x-\[-50\%\] {
     --tw-translate-x: -50%;
     -webkit-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -7538,6 +7581,11 @@ video {
     -webkit-column-gap: 2rem;
        -moz-column-gap: 2rem;
             column-gap: 2rem;
+  }
+  .tablet\:gap-x-4 {
+    -webkit-column-gap: 1rem;
+       -moz-column-gap: 1rem;
+            column-gap: 1rem;
   }
   .tablet\:self-end {
     -webkit-align-self: flex-end;
@@ -9516,6 +9564,9 @@ video {
   .desktop\:ml-3 {
     margin-left: 0.75rem;
   }
+  .desktop\:mr-6 {
+    margin-right: 1.5rem;
+  }
   .desktop\:block {
     display: block;
   }
@@ -9624,6 +9675,9 @@ video {
   }
   .desktop\:w-\[1020px\] {
     width: 1020px;
+  }
+  .desktop\:w-\[420px\] {
+    width: 420px;
   }
   .desktop\:w-\[546px\] {
     width: 546px;
@@ -9762,6 +9816,27 @@ video {
         -ms-flex: 1.4;
             flex: 1.4;
   }
+  .desktop\:flex-\[1_0_60\%\] {
+    -webkit-box-flex: 1;
+    -webkit-flex: 1 0 60%;
+       -moz-box-flex: 1;
+        -ms-flex: 1 0 60%;
+            flex: 1 0 60%;
+  }
+  .desktop\:flex-\[1_0_40\%\] {
+    -webkit-box-flex: 1;
+    -webkit-flex: 1 0 40%;
+       -moz-box-flex: 1;
+        -ms-flex: 1 0 40%;
+            flex: 1 0 40%;
+  }
+  .desktop\:flex-\[1_0_30\%\] {
+    -webkit-box-flex: 1;
+    -webkit-flex: 1 0 30%;
+       -moz-box-flex: 1;
+        -ms-flex: 1 0 30%;
+            flex: 1 0 30%;
+  }
   .desktop\:-translate-y-1\/2 {
     --tw-translate-y: -50%;
     -webkit-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -9842,6 +9917,16 @@ video {
     -webkit-column-gap: 2rem;
        -moz-column-gap: 2rem;
             column-gap: 2rem;
+  }
+  .desktop\:gap-x-4 {
+    -webkit-column-gap: 1rem;
+       -moz-column-gap: 1rem;
+            column-gap: 1rem;
+  }
+  .desktop\:gap-x-6 {
+    -webkit-column-gap: 1.5rem;
+       -moz-column-gap: 1.5rem;
+            column-gap: 1.5rem;
   }
   .desktop\:overflow-hidden {
     overflow: hidden;
