--- a/app/components/nav/nav.css
+++ b/app/components/nav/nav.css
@@ -1,3 +1,35 @@
 .inView {
-  @apply translate-y-[0px];
+ @apply translate-y-[0px];
+}
+
+.nav-btn {
+ @apply flex text-emerald-900 border-white rounded-xl items-center font-semibold text-base transition-all duration-300  hover:bg-grey-100 hover:border-grey-100;
+
+ .chevron-down-icon {
+  @apply text-success-700 group-hover:fill-sage-700 ml-1 h-5 w-5 transition ease-in-out duration-150;
+ }
+
+ &.selected {
+  /* @apply bg-sage-200; */
+ }
+
+ &.active {
+  @apply bg-grey-100 border-grey-100;
+ }
+
+ &.dark {
+  @apply text-sage-50 hover:bg-emerald-500;
+ }
+
+ &.dark-popup {
+  @apply text-tangerine-900 border-tangerine-400 bg-tangerine-400 hover:bg-tangerine-200 hover:border-tangerine-200;
+
+  .chevron-down-icon {
+   @apply text-tangerine-900;
+  }
+
+  &.selected {
+   @apply bg-tangerine-200 border-tangerine-200;
+  }
+ }
 }
